# try-cmake-with-git-submodule

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  add submodule.sh  update submodule.sh
